Comments css overlap fixed

--- a/application/static/stylus/comments.styl
+++ b/application/static/stylus/comments.styl
@@ -95,6 +95,8 @@
       padding-top: 12px
       resize: none
       overflow: hidden
+      padding-bottom: 15px
+      background-color: transparent
     .right-buttons
       top: 0
       right: 0
